Add support for Likes and Dislikes
