# src/CSharp/EasyMicroservices.ActionsMicroservice.Clients/Connected Services/ActionsGeneratedServices/OpenAPI.nswag.json
@@ -5,12 +5,12 @@
     "version": "1.0"
   },
   "paths": {
-    "/api/Like/ToggleLike": {
+    "/api/Like/Like": {
       "post": {
         "tags": [
           "Like"
         ],
-        "operationId": "ToggleLike",
+        "operationId": "Like",
         "requestBody": {
           "content": {
             "application/json": {
@@ -36,17 +36,115 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "$ref": "#/components/schemas/LikeContractMessageContract"
+                  "$ref": "#/components/schemas/MessageContract"
                 }
               },
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/LikeContractMessageContract"
+                  "$ref": "#/components/schemas/MessageContract"
                 }
               },
               "text/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/LikeContractMessageContract"
+                  "$ref": "#/components/schemas/MessageContract"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/Like/Dislike": {
+      "post": {
+        "tags": [
+          "Like"
+        ],
+        "operationId": "Dislike",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/GetUniqueIdentityRequestContract"
+              }
+            },
+            "text/json": {
+              "schema": {
+                "$ref": "#/components/schemas/GetUniqueIdentityRequestContract"
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "$ref": "#/components/schemas/GetUniqueIdentityRequestContract"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/MessageContract"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/MessageContract"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/MessageContract"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/Like/GetLikesByStatus": {
+      "post": {
+        "tags": [
+          "Like"
+        ],
+        "operationId": "GetLikesByStatus",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/GetLikesRequestContract"
+              }
+            },
+            "text/json": {
+              "schema": {
+                "$ref": "#/components/schemas/GetLikesRequestContract"
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "$ref": "#/components/schemas/GetLikesRequestContract"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/GetLikesByStatusResponseMessageContract"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GetLikesByStatusResponseMessageContract"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GetLikesByStatusResponseMessageContract"
                 }
               }
             }
@@ -901,6 +999,45 @@
           15,
           16
         ]
+      },
+      "GetLikesByStatusResponse": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "count": {
+            "type": "integer",
+            "format": "int64"
+          }
+        }
+      },
+      "GetLikesByStatusResponseMessageContract": {
+        "title": "MessageContract<GetLikesByStatusResponse>",
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "isSuccess": {
+            "type": "boolean"
+          },
+          "error": {
+            "$ref": "#/components/schemas/ErrorContract"
+          },
+          "result": {
+            "$ref": "#/components/schemas/GetLikesByStatusResponse"
+          }
+        }
+      },
+      "GetLikesRequestContract": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "uniqueIdentity": {
+            "type": "string",
+            "nullable": true
+          },
+          "isLiked": {
+            "type": "boolean"
+          }
+        }
       },
       "GetUniqueIdentityRequestContract": {
         "type": "object",
